
2003-11-12	Joel Becker <joel.becker@oracle.com>

	* libosm/{osm,asm}lib.c: Rename osmlib.c to asmlib.c.
	* libosm/Makefile: Handle the rename.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* test/{osmbad,asmbad}.c: Rename osmbad.c to asmbad.c.
	* test/{osmtest,asmtest}.c: Rename osmtest.c to asmtest.c.
	* test/{osmtest-multi,asmtest-multi}.c: Rename osmtest-multi.c
		to asmtest-multi.c.
	* test/{osmprofile,asmprofile}.c: Rename osmprofile.c to
		asmprofile.c.
	* test/sizes.c: OSM->ASM.
	* test/Makefile: Handle all the renames.
	* tools/{osmtool,asmtool}.c: Rename osmtool.c to asmtool.c.
	* tools/Makefile: Handle the rename.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* kernel/oracleasm.c: Last little 'osm' bits.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/osmabi.h: Rename everything to ASM.
	* include/linux/osmdisk.h: Rename everything to ASM.
	* include/linux/osmkernel.h: Rename everything to ASM.
	* kernel/oracleasm.c: Rename everything to ASM.
	* libosm/osmlib.c: Rename internal calls and stuff to ASM.
	* test/sizes.c: Rename things to ASM.
	* tools/osmtool.c: Rename to ASM.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* kernel/Makefile: Move osm.c oracleasm.c.
	* kernel/osm.c: Moved to oracleasm.c.
	* kernel/oracleasm.c: Moved from osm.c.
	* libosm/osmlib.c: Change /dev/osm to /dev/oracleasm.
	* redhat/osm.init: Change /dev/osm to /dev/oracleasm.

2003-11-10	Joel Becker <joel.becker@oracle.com>

	* configure.in: Start the TOOLS/MODULEARCH stuff.
	* Config.make.in: Add TOOLS/MODULEARCH stuff.
	* redhat/osm.init: Some more distro portability.
	* test/Makefile: osmbad added.
	* test/osmbad.c: Added.
	* test/osmtest-multi: Fix the -bin junk.
	* kernel/osm.c: Remove the SCSI-only limitation.
	
2003-10-30	Joel Becker <joel.becker@oracle.com>

	* Makefile: Add rhel3 targets.
	* configure.in: Add rhel3 specfile.
	* kernel/Makefile: Add hugemem target.
	* redhat/Makefile: Add rhel3 specfile.